// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Number control Disable 1`] = `
<div
  class="control disabled"
>
  <main
    class="control__body"
    id="id"
  >
    <p
      class="control__name"
      title="name"
    >
      name
    </p>
    <div
      class="control__content control__content--range"
    >
      <input
        class="range"
        disabled="true"
        max="10"
        min="0"
        step="0.1"
        type="range"
        value="0"
      />
      
  
      <span
        class="rangeValue"
      >
        
      0
    
      </span>
    </div>
  </main>
</div>
`;

exports[`Number control Enable 1`] = `
<div
  class="control"
>
  <main
    class="control__body"
    id="id"
  >
    <p
      class="control__name"
      title="name"
    >
      name
    </p>
    <div
      class="control__content control__content--range"
    >
      <input
        class="range"
        max="10"
        min="0"
        step="0.1"
        type="range"
        value="0"
      />
      
  
      <span
        class="rangeValue"
      >
        
      0
    
      </span>
    </div>
  </main>
</div>
`;

exports[`Number control If it matches snapshot after initial load 1`] = `
<div
  class="control"
>
  <main
    class="control__body"
    id="id"
  >
    <p
      class="control__name"
      title="name"
    >
      name
    </p>
    <div
      class="control__content control__content--range"
    >
      <input
        class="range"
        max="10"
        min="0"
        step="0.1"
        type="range"
        value="0"
      />
      
  
      <span
        class="rangeValue"
      >
        
      0
    
      </span>
    </div>
  </main>
</div>
`;
